# okf-knowledge-hub

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: verify.yml
docs/: README.md
docs/architecture/: system-design.md
docs/product/: design-system.md  features.md  information-model.md  open-questions.md  overview.md  screens.md  use-cases.md  workflow.css  workflow.html
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.test.tsx  App.tsx  AppRoutes.tsx
src/components/patterns/: AppShell.test.tsx  AppShell.tsx  AppSidebar.tsx  PagePlaceholder.tsx
src/components/ui/: button.test.tsx  button.tsx  tooltip.tsx
src/features/preferences/: PreferencesProvider.test.tsx  PreferencesProvider.tsx  PreferencesRepository.ts  display-density.test.ts  display-density.ts
src/infrastructure/preferences/: BrowserPreferencesRepository.test.ts  BrowserPreferencesRepository.ts  TauriPreferencesRepository.ts  createPreferencesRepository.ts
src/pages/: DesignSystemPage.test.tsx  DesignSystemPage.tsx  DocumentsPage.tsx  HomePage.tsx  ProjectPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx
src/styles/: color-contrast.test.ts  globals.css  tokens.css
src/test/: FakePreferencesRepository.ts
