[package]
name = "okhub"
version = "0.1.0"
description = "A Git-native OKF knowledge workspace"
authors = ["OkHub contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "okhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
